.kubernetes/api-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - name: api
          image: api:1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          volumeMounts:
          - name: api-root
            mountPath: /api
      volumes:
      - name: api-root
        hostPath:
          path: /var/www/kubbe-example/api
