.kubernetes/client-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: client
    spec:
      containers:
        - name: client
          image: client:1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: client-root
            mountPath: /client
      volumes:
      - name: client-root
        hostPath:
          path: /var/www/kubbe-example/client
