.kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: LoadBalancer
  ports:
    - port: 3000
  selector:
    app: api
