.kubernetes/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
#  type: LoadBalancer
  selector:
    name: kube-example
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
